--- a/sample/project.properties
+++ b/sample/project.properties
@@ -12,5 +12,4 @@
 
 # Project target.
 target=android-17
-android.library=true
-android.library.reference.1=../ActionBarSherlock/library
+android.library.reference.1=../library
