--- a/sample/AndroidManifest.xml
+++ b/sample/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
         <activity
             android:name="dev.dworks.libs.actionbartoggle.demo.MainActivity"
             android:label="@string/app_name" >
