--- a/sample/project.properties
+++ b/sample/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-19
 android.library.reference.1=..\\library
-android.library.reference.2=../../ActionBarCompat
+android.library.reference.2=../../../Android Development/Android Developement Studio/work/appcompat_v7
